--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,18 @@ vid/swdc_siyeon.mp4
 vid/swdc_sua.mp4
 vid/영상만드는법_숏_1m30s_롱_10m.txt
 vid/유현숏버전.mp4
+vid/Form_OriginalFile/swdc_dami.mp4
+vid/Form_OriginalFile/swdc_gahyun.mp4
+vid/Form_OriginalFile/swdc_handong.mp4
+vid/Form_OriginalFile/swdc_jiu.mp4
+vid/Form_OriginalFile/swdc_siyeon.mp4
+vid/Form_OriginalFile/swdc_sua.mp4
+vid/Form_OriginalFile/swdc_yoohyeon.mp4
+vid/swdc_dami2.mp4
+vid/swdc_gahyun2.mp4
+vid/swdc_handong2.mp4
+vid/swdc_jiu2.mp4
+vid/swdc_siyeon2.mp4
+vid/swdc_sua2.mp4
+vid/swdc_yoohyeon.mp4
+vid/swdc_yoohyeon2.mp4
